trunk/roflkode-read-only/target/generated-sources/javacc/edu/lmu/cs/xlg/roflkode/syntax/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package edu.lmu.cs.xlg.roflkode.syntax;

import java.util.List;
import java.util.ArrayList;
import java.io.Reader;
import edu.lmu.cs.xlg.util.Log;
import edu.lmu.cs.xlg.roflkode.entities.*;

public class Parser implements ParserConstants {

    /**
     * Returns the result of parsing the ROFLKODE program on the given Reader.
     */
    public Script parse(Reader reader, Log log) {
        try {
            return parseScript();
        } catch (TokenMgrError e) {
            log.exception(e);
            return null;
        } catch (ParseException e) {
            log.exception(e);
            return null;
        }
    }

  final public Script parseScript() throws ParseException {
    List<Statement> statements = new ArrayList<Statement>();
    Statement s;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BR:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(BR);
    }
    jj_consume_token(4);
    label_2:
    while (true) {
      jj_consume_token(BR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BR:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      parseImport();
    }
    label_4:
    while (true) {
      s = parseStmt();
                      statements.add(s);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 8:
      case 12:
      case 16:
      case 18:
      case 22:
      case 23:
      case 26:
      case 28:
      case 31:
      case 32:
      case 33:
      case 35:
      case 36:
      case 37:
      case 51:
      case 58:
      case 60:
      case 61:
      case 63:
      case 81:
      case 82:
      case 83:
      case 84:
      case 85:
      case 86:
      case 87:
      case 88:
      case 100:
      case INTLIT:
      case NUMLIT:
      case CHARLIT:
      case STRINGLIT:
      case ID:
      case 116:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
    }
    jj_consume_token(5);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BR:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_5;
      }
      jj_consume_token(BR);
    }
    jj_consume_token(0);
     {if (true) return new Script(statements);}
    throw new Error("Missing return statement in function");
  }

  final public void parseImport() throws ParseException {
    jj_consume_token(6);
    jj_consume_token(7);
    jj_consume_token(ID);
    jj_consume_token(94);
    label_6:
    while (true) {
      jj_consume_token(BR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BR:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_6;
      }
    }
  }

  final public Statement parseStmt() throws ParseException {
    Statement s;
    Declarable d;
    ModifierExpression e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
    case 18:
    case 26:
      d = parseDec();
                      s = new DeclarationStatement(d);
      break;
    default:
      jj_la1[7] = jj_gen;
      if (jj_2_1(2147483647)) {
        s = parseComplexStmt();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 12:
        case 16:
        case 22:
        case 23:
        case 28:
        case 31:
        case 32:
        case 33:
        case 35:
        case 36:
        case 37:
        case ID:
          s = parseSimpleStmt();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 38:
          case 39:
          case 40:
          case 41:
            e = parseModifier();
                            s = new ModifiedStatement(s, e);
            break;
          default:
            jj_la1[6] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    label_7:
    while (true) {
      jj_consume_token(BR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BR:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_7;
      }
    }
     {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public Declarable parseDec() throws ParseException {
  Declarable d;
    if (jj_2_2(2)) {
      d = parseVardec();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 8:
      case 26:
        d = parseFundec();
        break;
      case 18:
        d = parseTypedec();
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return d;}
    throw new Error("Missing return statement in function");
  }

  final public Variable parseVardec() throws ParseException {
  Type t;
  Token name;
  Expression e;
    jj_consume_token(8);
    jj_consume_token(7);
    jj_consume_token(9);
    t = parseType();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 21:
      jj_consume_token(21);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 115:
        jj_consume_token(115);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      e = parseExp();
     {if (true) return new Variable(name.image, t, e);}
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
     {if (true) return new Variable(name.image, t);}
    throw new Error("Missing return statement in function");
  }

  final public Type parseType() throws ParseException {
  Token name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 25:
      name = jj_consume_token(25);
      break;
    case 19:
      name = jj_consume_token(19);
      break;
    case 20:
      name = jj_consume_token(20);
      break;
    case 29:
      name = jj_consume_token(29);
      break;
    case 27:
      name = jj_consume_token(27);
      break;
    case ID:
      name = jj_consume_token(ID);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return new Type(name.image);}
    throw new Error("Missing return statement in function");
  }

  final public Type parseTypedec() throws ParseException {
  Token name;
    jj_consume_token(18);
    jj_consume_token(34);
    jj_consume_token(14);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BR:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_8;
      }
      jj_consume_token(BR);
    }
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 19:
      case 20:
      case 25:
      case 27:
      case 29:
      case ID:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_9;
      }
      parseType();
      jj_consume_token(ID);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BR:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_10;
        }
        jj_consume_token(BR);
      }
    }
    jj_consume_token(15);
    name = jj_consume_token(ID);
     {if (true) return new Type(name.image);}
    throw new Error("Missing return statement in function");
  }

  final public Block parseBlock() throws ParseException {
    List<Statement> statements = new ArrayList<Statement>();
    Statement s;
    label_11:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_11;
      }
      s = parseStmt();
                                   statements.add(s);
    }
     {if (true) return new Block(statements);}
    throw new Error("Missing return statement in function");
  }

  final public Function parseFundec() throws ParseException {
  Block b;
  Type t;
  Token name;
  Type returnType = new Type("void");
  List<Variable> p = new ArrayList<Variable>();
  Function f;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
      jj_consume_token(6);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        jj_consume_token(24);
        returnType = parseType();
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      name = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 13:
      case 17:
        p = parseParams();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      label_12:
      while (true) {
        jj_consume_token(BR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BR:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_12;
        }
      }
      b = parseBlock();
      jj_consume_token(30);
     f = new Function(returnType.getName(), name.image, p, b);
      break;
    case 26:
      jj_consume_token(26);
      jj_consume_token(6);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        jj_consume_token(24);
        returnType = parseType();
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      name = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 13:
      case 17:
        p = parseParams();
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
     f = new Function(returnType.getName(), name.image, p);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

  final public List<Variable> parseParams() throws ParseException {
  List<Variable> parameters = new ArrayList<Variable>();
  Type t;
  Token name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 17:
      jj_consume_token(17);
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(13);
    t = parseType();
    name = jj_consume_token(ID);
     parameters.add(new Variable(name.image, t));
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_13;
      }
      jj_consume_token(11);
      t = parseType();
      name = jj_consume_token(ID);
     parameters.add(new Variable(name.image, t));
    }
     {if (true) return parameters;}
    throw new Error("Missing return statement in function");
  }

  final public Statement parseSimpleStmt() throws ParseException {
    List<Expression> expressions = new ArrayList<Expression>();
    Expression e;
    VariableExpression v;
    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
      jj_consume_token(12);
      label_14:
      while (true) {
        e = parseExp();
                           expressions.add(e);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 58:
        case 61:
        case 63:
        case 81:
        case 82:
        case 83:
        case 84:
        case 85:
        case 86:
        case 87:
        case 88:
        case 100:
        case INTLIT:
        case NUMLIT:
        case CHARLIT:
        case STRINGLIT:
        case ID:
        case 116:
          ;
          break;
        default:
          jj_la1[25] = jj_gen;
          break label_14;
        }
      }
     {if (true) return new YoStatement(expressions);}
      break;
    case 36:
      jj_consume_token(36);
      label_15:
      while (true) {
        e = parseExp();
                                 expressions.add(e);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 58:
        case 61:
        case 63:
        case 81:
        case 82:
        case 83:
        case 84:
        case 85:
        case 86:
        case 87:
        case 88:
        case 100:
        case INTLIT:
        case NUMLIT:
        case CHARLIT:
        case STRINGLIT:
        case ID:
        case 116:
          ;
          break;
        default:
          jj_la1[26] = jj_gen;
          break label_15;
        }
      }
     {if (true) return new FacepalmStatement(expressions);}
      break;
    case 33:
      jj_consume_token(33);
      v = parseVar();
     {if (true) return new PwnzorStatement(v);}
      break;
    case 35:
      jj_consume_token(35);
      v = parseVar();
     {if (true) return new UpzorzStatement(v);}
      break;
    case 37:
      jj_consume_token(37);
      v = parseVar();
     {if (true) return new NerfzorzStatement(v);}
      break;
    case 28:
      jj_consume_token(28);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        v = parseVar();
                            {if (true) return new GtfoStatement(v);}
        break;
      default:
        jj_la1[27] = jj_gen;
        ;
      }
     {if (true) return new GtfoStatement();}
      break;
    case 22:
      jj_consume_token(22);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        t = jj_consume_token(ID);
                    {if (true) return new HwgaStatement(t.image);}
        break;
      default:
        jj_la1[28] = jj_gen;
        ;
      }
     {if (true) return new HwgaStatement();}
      break;
    case 31:
      jj_consume_token(31);
      jj_consume_token(13);
      e = parseExp();
      {if (true) return new HerezStatement (e);}
      break;
    case 23:
      jj_consume_token(23);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
      case 61:
      case 63:
      case 81:
      case 82:
      case 83:
      case 84:
      case 85:
      case 86:
      case 87:
      case 88:
      case 100:
      case INTLIT:
      case NUMLIT:
      case CHARLIT:
      case STRINGLIT:
      case ID:
      case 116:
        e = parseExp();
                            {if (true) return new DiafStatement(e);}
        break;
      default:
        jj_la1[29] = jj_gen;
        ;
      }
     {if (true) return new DiafStatement();}
      break;
    case 32:
      jj_consume_token(32);
      t = jj_consume_token(ID);
     {if (true) return new GimmehStatement(t.image);}
      break;
    case 16:
      jj_consume_token(16);
      e = parseExp();
     {if (true) return new BrbStatement(e);}
      break;
    default:
      jj_la1[30] = jj_gen;
      if (jj_2_4(2147483647)) {
        v = parseVar();
        jj_consume_token(10);
        e = parseExp();
     {if (true) return new AssignmentStatement(v, e);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          t = jj_consume_token(ID);
          expressions = parseArgs();
     {if (true) return new CallStatement(t.image, expressions);}
          break;
        default:
          jj_la1[31] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public ModifierExpression parseModifier() throws ParseException {
    String s;
    Expression e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      jj_consume_token(38);
              s = "IF";
      break;
    case 39:
      jj_consume_token(39);
      jj_consume_token(38);
                     s = "CEPT IF";
      break;
    case 41:
      jj_consume_token(41);
                 s = "WHIEL";
      break;
    case 40:
      jj_consume_token(40);
               s = "TIL";
      break;
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    e = parseExp();
     {if (true) return new ModifierExpression(e, s);}
    throw new Error("Missing return statement in function");
  }

  final public Statement parseComplexStmt() throws ParseException {
    Statement s;
    if (jj_2_5(2147483647)) {
      s = parseConditional();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
      case 61:
      case 63:
      case 81:
      case 82:
      case 83:
      case 84:
